--- a/Samples/Samples/Views/NetworkView.xaml
+++ b/Samples/Samples/Views/NetworkView.xaml
@@ -8,10 +8,10 @@
             <TableView.Root>
                 <TableRoot>
                     <TableSection Title="Status">
-                        <SwitchCell Text="Connected" On="{Binding Network.IsConnected, Mode=OneWay}" />
-                        <SwitchCell Text="Internet Available" On="{Binding Network.IsInternetAvailable, Mode=OneWay}" />
-                        <SwitchCell Text="WiFi" On="{Binding Network.IsWifi, Mode=OneWay}" />
-                        <SwitchCell Text="Data Carrier" On="{Binding Network.IsMobile, Mode=OneWay}" />
+                        <SwitchCell Text="Connected" On="{Binding Network.IsConnected, Mode=OneWay}" IsEnabled="false" />
+                        <SwitchCell Text="WiFi" On="{Binding Network.IsWifi, Mode=OneWay}" IsEnabled="false" />
+                        <SwitchCell Text="Data Carrier" On="{Binding Network.IsMobile, Mode=OneWay}" IsEnabled="false" />
+                    	<SwitchCell Text="Roaming" On="{Binding Network.IsRoaming, Mode=OneWay}" IsEnabled="false" />
                     </TableSection>
                     <TableSection Title="Reachability Test">
                         <EntryCell Label="Host" Text="{Binding Host}" />
