--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
-             xmlns:acrview="clr-namespace:Acr.XamForms.Views;assembly=Acr.XamForms"
+             xmlns:acrview="clr-namespace:Acr.XamForms.Controls;assembly=Acr.XamForms.Controls"
              x:Class="Samples.Views.SettingsView"
              Title="Settings">
     <ContentPage.Resources>
