--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
-             xmlns:acrview="clr-namespace:Acr.XamForms.Controls;assembly=Acr.XamForms.Controls"
+             xmlns:local="clr-namespace:Samples.Views;assembly=Samples"
              x:Class="Samples.Views.SettingsView"
              Title="Settings">
     <ContentPage.Resources>
@@ -17,12 +17,12 @@
     </ContentPage.ToolbarItems>
     
     <StackLayout>
-        <acrview:ListView ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
+        <local:ListView ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Text="{Binding Key}" Detail="{Binding Value}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </acrview:ListView>
+        </local:ListView>
     </StackLayout>
 </ContentPage>
