--- a/Samples/Samples/Views/UserDialogView.xaml
+++ b/Samples/Samples/Views/UserDialogView.xaml
@@ -12,6 +12,7 @@
                 <Button Text="Action Sheet" Command="{Binding ActionSheet}" />
                 <Button Text="Alert" Command="{Binding Alert}" />
                 <Button Text="Confirm" Command="{Binding Confirm}" />
+                <Button Text="Login" Command="{Binding Login}" />
                 <!--<Button Text="Date Prompt" Command="{Binding DatePrompt}" />
                 <Button Text="Time Prompt" Command="{Binding TimePrompt}" />
                 <Button Text="Date/Time Prompt" Command="{Binding DateTimePrompt}" />
