Update to Tamarin Forms application model Fix droid login dialog password display

--- a/Samples/Samples.WinPhone/MainPage.xaml
+++ b/Samples/Samples.WinPhone/MainPage.xaml
@@ -1,6 +1,7 @@
-﻿<phone:PhoneApplicationPage
+﻿<winPhone:FormsApplicationPage
     x:Class="Samples.WinPhone.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:winPhone="clr-namespace:Xamarin.Forms.Platform.WinPhone;assembly=Xamarin.Forms.Platform.WP8"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
@@ -13,4 +14,4 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-</phone:PhoneApplicationPage>
+</winPhone:FormsApplicationPage
