--- a/Samples/Samples/Views/SignatureListView.xaml
+++ b/Samples/Samples/Views/SignatureListView.xaml
@@ -2,10 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
-<<<<<<< HEAD
              xmlns:local="clr-namespace:Samples.Views;assembly=Samples"
-=======
->>>>>>> dev
              x:Class="Samples.Views.SignatureListView"
              Title="Signature Pad">
     
@@ -19,12 +16,7 @@
     <StackLayout>
         <Button Text="Create Signature" Command="{Binding Create}" />
         <Label Text="No Signatures Found" IsVisible="{Binding NoData}" />
-
-<<<<<<< HEAD
-        <local:ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemClickCommand="{Binding Select}" ItemsSource="{Binding List}">
-=======
-        <ListView x:Name="ListView" IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding List}">
->>>>>>> dev
+        <ListView x:Name="ListView" ItemsSource="{Binding List}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -38,10 +30,6 @@
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-<<<<<<< HEAD
-        </local:ListView>
-=======
         </ListView>
->>>>>>> dev
     </StackLayout>
 </ContentPage>
