--- a/Samples/Samples.WinPhone/MainPage.xaml
+++ b/Samples/Samples.WinPhone/MainPage.xaml
@@ -14,4 +14,4 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-</winPhone:FormsApplicationPage
+</winPhone:FormsApplicationPage>
