added success and error messages

--- a/Samples/Samples/Views/UserDialogView.xaml
+++ b/Samples/Samples/Views/UserDialogView.xaml
@@ -9,6 +9,8 @@
         <ScrollView>
             <StackLayout>
                 <Label Text="{Binding Result}" />
+                <Button Text="Success" Command="{Binding DisplaySuccess}" />
+                <Button Text="Error" Command="{Binding DisplayError}" />
                 <Button Text="Action Sheet" Command="{Binding ActionSheet}" />
                 <Button Text="Alert" Command="{Binding Alert}" />
                 <Button Text="Confirm" Command="{Binding Confirm}" />
